<resources>
    <string name="app_name">Lab2</string>
    <string name="text_name">Имя:  <font color='#ACACDE'><b>Екатерина</b></font></string>
    <string name="text_age">"Возраст:  <font color='#ACACDE'><b>23</b></font>"</string>
    <string name="text_specialisation">Специализация:  <font color='#ACACDE'><b>Android-разработчик</b></font></string>
    <string name="text_photo">Фото</string>
    <string name="text_projects">Проекты</string>
    <string name="text_achievements">Достижения</string>
    <string name="textButton">Push for time</string>
</resources>